--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,144 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:onClick="getQueryMap"
+            android:text="getQueryMap"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="getQueryMap"
-                android:text="getQueryMap"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postField"
+            android:text="postField"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postField"
-                android:text="postField"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postFieldMap"
+            android:text="postFieldMap"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postFieldMap"
-                android:text="postFieldMap"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postPart"
+            android:text="postPart"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postPart"
-                android:text="postPart"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postPartMap"
+            android:text="postPartMap"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postPartMap"
-                android:text="postPartMap"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postBody"
+            android:text="postBody"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postBody"
-                android:text="postBody"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postBodyMap"
+            android:text="postBodyMap"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postBodyMap"
-                android:text="postBodyMap"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postBodyString"
+            android:text="postBodyString"
+            android:textAllCaps="false" />
 
         <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postBodyString"
-                android:text="postBodyString"
-                android:textAllCaps="false" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="postBodyResultModel"
+            android:text="postBodyResultModel"
+            android:textAllCaps="false" />
 
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="postBodyResultModel"
-                android:text="postBodyResultModel"
-                android:textAllCaps="false" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <Button
+            <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="uploadFiles"
                 android:text="uploadFiles"
                 android:textAllCaps="false" />
 
-        <LinearLayout
+            <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="download"
-                    android:text="download"
-                    android:textAllCaps="false" />
-
-            <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="pause"
-                    android:text="pause"
-                    android:textAllCaps="false" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="pauseUploadFiles"
+                android:text="pauseUploadFiles"
+                android:textAllCaps="false" />
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="download"
+                android:text="download"
+                android:textAllCaps="false" />
 
             <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="downloadByMultiThread"
-                    android:text="downloadByMultiThread"
-                    android:textAllCaps="false" />
-
-            <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="pauseByMultiThread"
-                    android:text="pauseByMultiThread"
-                    android:textAllCaps="false" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="pause"
+                android:text="pause"
+                android:textAllCaps="false" />
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="downloadByMultiThread"
+                android:text="downloadByMultiThread"
+                android:textAllCaps="false" />
 
             <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="split"
-                    android:text="split"
-                    android:textAllCaps="false" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="pauseByMultiThread"
+                android:text="pauseByMultiThread"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="merge"
-                    android:text="merge"
-                    android:textAllCaps="false" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="split"
+                android:text="split"
+                android:textAllCaps="false" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="merge"
+                android:text="merge"
+                android:textAllCaps="false" />
         </LinearLayout>
 
     </LinearLayout>
