--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,8 +87,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="pauseUploadFiles"
-                android:text="pauseUploadFiles"
+                android:onClick="cancelUploadFiles"
+                android:text="cancelUploadFiles"
                 android:textAllCaps="false" />
         </LinearLayout>
 
